# cracking_the_coding_interview

./: .gitignore  Makefile  README.md  pyproject.toml
code/: README.md
code/chapter_1/: README.md
code/chapter_1/question_1/: README.md  __init__.py
test/chapter_1/question_1/: test_solution.py
tests/arrays_and_strings/: test_check_permutation.py  test_is_unique.py
